...

    },
    "Calendar" : {
      "comment" : "The title of the calendar view.",
      "isCommentAutoGenerated" : true
    },
    "Cancel" : {

    },
    "Cast" : {

    },
    "Categories" : {
...
    "Cleanuparr" : {

    },
    "Cleanuparr Readiness" : {

    },
    "Clear" : {
      "comment" : "The button to clear all recent notifications.",
      "isCommentAutoGenerated" : true
    },
    "Clear %@" : {

    },
...
    "Clear Finished" : {

    },
    "Clear History" : {

    },
    "Clear Notifications?" : {

    },
    "Clear Recent Searches?" : {

    },
    "Clear SABnzbd History?" : {
...
    "Client Management" : {

    },
    "Client Type" : {

    },
    "Close" : {

    },
    "Close search" : {

    },
    "Collapsed" : {
...
      "comment" : "A description of the empty state when there are no language profiles configured in Bazarr.",
      "isCommentAutoGenerated" : true
    },
    "No languages configured" : {

    },
    "No Libraries" : {

    },
    "No Library Match" : {
      "comment" : "A title that describes a search for a movie in the library.",
      "isCommentAutoGenerated" : true
    },
...

    },
    "No Movies Found" : {
      "comment" : "Title displayed when there are no movies being tracked by Bazarr.",
      "isCommentAutoGenerated" : true
    },
    "No Notifications Yet" : {

    },
    "No Paths Configured" : {

    },
    "No permissions granted" : {
...
    "Notification Settings" : {

    },
    "Notification Triggers" : {

    },
    "Notifications" : {

    },
    "Now" : {
      "comment" : "A label that displays the current category of a download client.",
      "isCommentAutoGenerated" : true
    },
...
    "Removable" : {

    },
    "Removal Reasons" : {

    },
    "Remove" : {

    },
    "Remove '%@' from %@?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Remove Job Only" : {

    },
    "Remove Library" : {

    },
    "Remove Library?" : {
      "comment" : "A confirmation sheet for removing a library.",
      "isCommentAutoGenerated" : true
    },
    "Remove Linked App?" : {

    },
...
